err_fixed.txt
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.34s
     Running `target\debug\kivm.exe compile -i tests\test_errors.kix`

tests\test_errors.kix:
error: Type mismatch: int vs str
  --> tests\test_errors.kix:7
   |
 7 | let c = a + b; // ERROR: Type mismatch int vs str
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  1 error(s) in Type Checker

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.7 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

error: process didn't exit successfully: `target\debug\kivm.exe compile -i tests\test_errors.kix` (exit code: 1)
